--- a/templates/cvexperience/index.html.twig
+++ b/templates/cvexperience/index.html.twig
@@ -8,7 +8,6 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Post</th>
                 <th>Entreprise</th>
                 <th>Debut</th>
@@ -20,15 +19,14 @@
         <tbody>
         {% for cv_experience in cv_experiences %}
             <tr>
-                <td>{{ cv_experience.id }}</td>
                 <td>{{ cv_experience.post }}</td>
                 <td>{{ cv_experience.entreprise }}</td>
                 <td>{{ cv_experience.debut ? cv_experience.debut|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ cv_experience.fin ? cv_experience.fin|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ cv_experience.description }}</td>
                 <td>
-                    <a href="{{ path('cv_experience_show', {'id': cv_experience.id}) }}">show</a>
-                    <a href="{{ path('cv_experience_edit', {'id': cv_experience.id}) }}">edit</a>
+                    <a href="{{ path('cvexperience_show', {'id': cv_experience.id}) }}">show</a>
+                    <a href="{{ path('cvexperience_edit', {'id': cv_experience.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
