--- a/templates/tag/_delete_form.html.twig
+++ b/templates/tag/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('tag_delete', {'id': tag.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet élément ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ tag.id) }}">
-    <button class="btn">Delete</button>
+    <button data-text="Supprimer"><span class="la la-trash"></span></button>
 </form>
