--- a/templates/annonce/_form.html.twig
+++ b/templates/annonce/_form.html.twig
@@ -9,8 +9,9 @@
         <div class="col-md-6">{{ form_row(form.qualites) }}</div>
     </div>
     <div class="row">
-        <div class="col-md-6">{{ form_row(form.stand) }}</div>
-        <div class="col-md-6">{{ form_row(form.forum) }}</div>
+        <div class="col-md-4">{{ form_row(form.stand) }}</div>
+        <div class="col-md-4">{{ form_row(form.forum) }}</div>
+        <div class="col-md-4">{{ form_row(form.tags) }}</div>
     </div>
     <div class="row">
         <div class="col-md-4">{{ form_row(form.salaire) }}</div>
