--- a/templates/home/forum_page.html.twig
+++ b/templates/home/forum_page.html.twig
@@ -10,7 +10,7 @@
                 <h1>{{ forum.nom }}</h1>
                 <ul class="page-breadcrumb">
                     <li><a href="{{ path('home') }}">Home</a></li>
-                    <li>Stands</li>
+                    <li>Forums</li>
                 </ul>
             </div>
         </div>
