--- a/templates/profile/new_cv.html.twig
+++ b/templates/profile/new_cv.html.twig
@@ -6,8 +6,8 @@
     <section class="user-dashboard">
         <div class="dashboard-outer">
             <div class="upper-title-box">
-                <h3>Cv Manager</h3>
-                <div class="text">Ready to jump back in?</div>
+                <h3>Mes CV</h3>
+                <div class="text">Je gère mes cv</div>
             </div>
             <div class="row">
 
