--- a/templates/home/annonce_page.html.twig
+++ b/templates/home/annonce_page.html.twig
@@ -52,11 +52,6 @@
                                     <span>{{ annonce.adresse }}</span>
                                 </li>
                                 {% endif %}
-                                <li>
-                                    <i class="icon icon-user-2"></i>
-                                    <h5>Job Title:</h5>
-                                    <span>Designer</span>
-                                </li>
                                 {% if annonce.horaires%}
                                 <li>
                                     <i class="icon icon-clock"></i>
@@ -66,16 +61,18 @@
                                 {% endif %}
                                 {% if annonce.salaire %}
                                 <li>
-                                    <i class="icon icon-rate"></i>
+                                    <i class="icon icon-salary"></i>
                                     <h5>Rémunération:</h5>
                                     <span>{{ annonce.salaire }}</span>
                                 </li>
                                 {% endif %}
+                                {% if annonce.nombrePostes %}
                                 <li>
                                     <i class="icon icon-salary"></i>
-                                    <h5>Salary:</h5>
+                                    <h5>Nombre de postes:</h5>
                                     <span>$35k - $45k</span>
                                 </li>
+                                {% endif %}
                             </ul>
                         </div>
 
@@ -91,7 +88,7 @@
                         <!-- Other Options -->
                         <div class="other-options">
                             <div class="social-share">
-                                <h5>Share this job</h5>
+                                <h5>Partager cette offre</h5>
                                 <a href="#" class="facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
                                 <a href="#" class="twitter"><i class="fab fa-twitter"></i> Twitter</a>
                                 <a href="#" class="google"><i class="fab fa-google"></i> Google+</a>
@@ -152,6 +149,17 @@
                                     <div class="btn-box"><a href="{{ annonce.stand.url }}" target="_blank" class="theme-btn btn-style-three">{{ annonce.stand.url }}</a></div>
                                 </div>
                             </div>
+                            <div class="sidebar-widget">
+                                <!-- Job Skills -->
+                                <h4 class="widget-title">Tags</h4>
+                                <div class="widget-content">
+                                    <ul class="job-skills">
+                                        {% for tag in annonce.tags %}
+                                            <li><a>{{ tag.nom }}</a></li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </div>
                         </aside>
                     </div>
                 </div>
@@ -159,63 +167,31 @@
                 <!-- Related Jobs -->
                 <div class="related-jobs">
                     <div class="title-box">
-                        <h3>Related Jobs</h3>
+                        <h3>Offres similaires</h3>
                         <div class="text">2020 jobs live - 293 added today.</div>
                     </div>
                     <div class="row">
-                        <!-- Job Block -->
+                        {% for annonce in annonces %}
                         <div class="job-block-four col-xl-3 col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <ul class="job-other-info">
-                                    <li class="time">Full Time</li>
-                                    <li class="privacy">Private</li>
-                                    <li class="required">Urgent</li>
+                                    {% if annonce.horaires %}<li class="time">{{ annonce.horaires }}</li>{% endif %}
+                                    {% if annonce.contrat %}<li class="privacy">{{ annonce.contrat }}</li>{% endif %}
+                                    {% if annonce.salaire %}<li class="required">{{ annonce.salaire }}</li>{% endif %}
                                 </ul>
-                                <span class="company-logo"><img src="images/resource/company-logo/3-1.png" alt=""></span>
+                                <span class="company-logo">
+                                    {% for logo in annonce.stand.logo %}
+                                        <img src="{{ asset('uploads/' ~ logo.nom) }}" alt="{{ logo.nom }}" style="width: 100px">
+                                            {% else %}
+                                        <img src="{{ asset('uploads/stand.png') }}" alt="" style="width: 100px">
+                                    {% endfor %}
+                                </span>
                                 <span class="company-name">Catalyst</span>
-                                <h4><a href="#">Software Engineer (Android), Libraries</a></h4>
+                                <h4><a href="#">{{ annonce.nom|capitalize }}</a></h4>
                                 <div class="location"><span class="icon flaticon-map-locator"></span> London, UK</div>
                             </div>
                         </div>
-
-                        <!-- Job Block -->
-                        <div class="job-block-four col-xl-3 col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <ul class="job-other-info">
-                                    <li class="time">Full Time</li>
-                                </ul>
-                                <span class="company-logo"><img src="images/resource/company-logo/3-2.png" alt=""></span>
-                                <span class="company-name">Catalyst</span>
-                                <h4><a href="#">Software Engineer (Android), Libraries</a></h4>
-                                <div class="location"><span class="icon flaticon-map-locator"></span> London, UK</div>
-                            </div>
-                        </div>
-
-                        <!-- Job Block -->
-                        <div class="job-block-four col-xl-3 col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <ul class="job-other-info">
-                                    <li class="time">Full Time</li>
-                                </ul>
-                                <span class="company-logo"><img src="images/resource/company-logo/3-3.png" alt=""></span>
-                                <span class="company-name">Upwork</span>
-                                <h4><a href="#">Software Engineer (Android), Libraries</a></h4>
-                                <div class="location"><span class="icon flaticon-map-locator"></span> London, UK</div>
-                            </div>
-                        </div>
-
-                        <!-- Job Block -->
-                        <div class="job-block-four col-xl-3 col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <ul class="job-other-info">
-                                    <li class="time">Full Time</li>
-                                </ul>
-                                <span class="company-logo"><img src="images/resource/company-logo/3-4.png" alt=""></span>
-                                <span class="company-name">invision</span>
-                                <h4><a href="#">Software Engineer (Android), Libraries</a></h4>
-                                <div class="location"><span class="icon flaticon-map-locator"></span> London, UK</div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
