--- a/templates/home/annonces.html.twig
+++ b/templates/home/annonces.html.twig
@@ -194,12 +194,9 @@
                             <div class="filter-block">
                                 <h4>Tags</h4>
                                 <ul class="tags-style-one">
-                                    <li><a href="#">app</a></li>
-                                    <li><a href="#">administrative</a></li>
-                                    <li><a href="#">android</a></li>
-                                    <li><a href="#">wordpress</a></li>
-                                    <li><a href="#">design</a></li>
-                                    <li><a href="#">react</a></li>
+                                    {% for tag in tags %}
+                                        <li><a href="#">{{ tag.nom }}</a></li>
+                                    {% endfor %}
                                 </ul>
                             </div>
                         </div>
@@ -242,26 +239,43 @@
                         <div class="row">
                             {% for annonce in annonces %}
                             <!-- Job Block -->
-                                <div class="job-block-four col-lg-6 col-md-6 col-sm-12">
-                                    <a href="{{ path('annonce_page', {'slug' : annonce.slug}) }}">
+                                <div class="job-block col-lg-6 col-md-12 col-sm-12">
                                     <div class="inner-box">
-                                        <ul class="job-other-info">
-                                            {% if annonce.horaires %}<li class="time">{{ annonce.horaires }}</li>{% endif %}
-                                            {% if annonce.accessibilite %}<li class="privacy">{{ annonce.accessibilite ? 'CMR' : 'Non CMR' }}</li>{% endif %}
-                                            {% if annonce.salaire %}<li class="required">{{ annonce.salaire }}</li>{% endif %}
-                                        </ul>
-                                        <span class="company-logo">
-                                            {% for logo in annonce.stand.logo %}
-                                                <img src="{{ asset('uploads/' ~ logo.nom) }}" alt="{{ logo.nom }}" style="width: 100px">
+                                        <div class="content">
+                                            <span class="company-logo">
+                                                {% for logo in annonce.stand.logo %}
+                                                    <img src="{{ asset('uploads/' ~ logo.nom) }}" alt="{{ logo.nom }}" style="width: 100px">
                                                         {% else %}
-                                                <img src="{{ asset('uploads/stand.png') }}" alt="" style="width: 100px">
-                                            {% endfor %}
-                                        </span>
-                                        <span class="company-name">{{ annonce.contrat }}</span>
-                                        <h4>{{ annonce.nom|capitalize|slice(0, 20) }}</h4>
-                                        <div class="location"><span class="icon flaticon-map-locator"></span> London, UK</div>
+                                                    <img src="{{ asset('uploads/stand.png') }}" alt="" style="width: 100px">
+                                                {% endfor %}
+                                            </span>
+                                            <h4><a href="{{ path('annonce_page', {'slug' : annonce.slug}) }}">{{ annonce.nom|capitalize|slice(0, 20) }}</a></h4>
+                                            <ul class="job-info">
+                                                <li><span class="icon flaticon-briefcase"></span> Segment</li>
+                                                <li><span class="icon flaticon-map-locator"></span> London, UK</li>
+                                                <li><span class="icon flaticon-clock-3"></span> 11 hours ago</li>
+                                                <li><span class="icon flaticon-money"></span> $35k - $45k</li>
+                                            </ul>
+                                            <ul class="job-other-info">
+                                                {% if annonce.horaires %}<li class="time">{{ annonce.horaires }}</li>{% endif %}
+                                                {% if annonce.accessibilite %}<li class="privacy">{{ annonce.accessibilite ? 'CMR' : 'Non CMR' }}</li>{% endif %}
+                                                {% if annonce.contrat %}<li class="required">{{ annonce.contrat }}</li>{% endif %}
+                                            </ul>
+                                            {% if is_granted('ROLE_CANDIDAT') %}
+                                                {% set isFavorite = false %}
+                                                {% for favoris in annonce.favoris %}
+                                                    {% if favoris.id == app.user.id %}
+                                                        {% set isFavorite = true %}
+                                                    {% endif %}
+                                                {% endfor %}
+                                                {% if isFavorite %}
+                                                    <a href="{{ path('annonce_retrait_favoris', {id: annonce.id}) }}" class="bookmark-btn"><i class="fas fa-heart"></i></a>
+                                                {% else %}
+                                                    <a href="{{ path('annonce_ajout_favoris', {id: annonce.id}) }}" class="bookmark-btn"><i class="far fa-heart"></i></a>
+                                                {% endif %}
+                                            {% endif %}
+                                        </div>
                                     </div>
-                                    </a>
                                 </div>
                             {% endfor %}
                         </div>
