--- a/templates/profile/_form.html.twig
+++ b/templates/profile/_form.html.twig
@@ -71,6 +71,9 @@
             <!--Tab-->
             <div class="tab" id="tab4">
                 <div class="row">
+                    <div class="widget-title d-flex flex-row">
+                        <a class="theme-btn btn-style-three small call-modal" href="{{ path('tag_new', {'profileId' : profile.id }) }}"><i class="fas fa-plus-circle mr-2"></i>Ajouter une compétence</a>
+                    </div>
                     {{ form_row(form.tags) }}
                 </div>
             </div>
